Ending point from tutorial

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,9 @@
   "description": "Adds a browser action icon to the toolbar. Click the button to choose a beast. The active tab's body content is then replaced with a picture of the chosen beast. See https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Examples#beastify",
   "homepage_url": "https://github.com/mdn/webextensions-examples/tree/master/beastify",
   "icons": {
-    "48": "icons/border-48.png"
+    "16": "icons/cup.svg",
+    "48": "icons/cup.svg",
+    "96": "icons/cup.svg"
   },
 
   "permissions": [
@@ -15,7 +17,7 @@
   ],
 
   "browser_action": {
-    "default_icon": "icons/border-48.png",
+    "default_icon": "icons/cup.svg",
     "default_title": "Beastify",
     "default_popup": "popup/choose_beast.html"
   },
@@ -24,6 +26,13 @@
     "beasts/frog.jpg",
     "beasts/turtle.jpg",
     "beasts/snake.jpg"
+  ],
+
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "js": ["scripts/content/beastify.js"]
+    }
   ]
 
 }
